--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,17 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  envied: ^0.3.0+3
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.7
   google_fonts: ^5.1.0
+  http: ^1.1.0
   lottie: ^2.5.0
 
 dev_dependencies:
+  build_runner: ^2.4.6
+  envied_generator: ^0.3.0+3
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
