--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   envied: ^0.3.0+3
   flutter:
     sdk: flutter
+  provider:
   flutter_svg: ^2.0.7
   google_fonts: ^5.1.0
   http: ^1.1.0
