changed deploy yml files

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: subosito/flutter-action@v1
       - name: "Run flutter pub get"
         run: flutter pub get
+      - name: "Run build_runner build"
+        run: flutter pub run build_runner build --delete-conflicting-outputs
       - name: "Build Web App"
         run: flutter build web
       - uses: FirebaseExtended/action-hosting-deploy@v0
