--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,13 @@ dependencies:
   envied: ^0.3.0+3
   flutter:
     sdk: flutter
-  provider:
   flutter_svg: ^2.0.7
   google_fonts: ^5.1.0
+  google_maps_flutter: ^2.4.0
   http: ^1.1.0
+  carousel_slider:
   lottie: ^2.5.0
+  provider: null
 
 dev_dependencies:
   build_runner: ^2.4.6
