--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  carousel_slider: null
   cupertino_icons: ^1.0.2
   envied: ^0.3.0+3
   flutter:
@@ -36,9 +37,9 @@ dependencies:
   google_fonts: ^5.1.0
   google_maps_flutter: ^2.4.0
   http: ^1.1.0
-  carousel_slider:
   lottie: ^2.5.0
   provider: null
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   build_runner: ^2.4.6
