--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -19,8 +19,10 @@ jobs:
         run: flutter pub get
       - name: "Create .env file"
         run: touch .env
-      - name: "Write to .env file"
+      - name: "Write baseUrl to .env file"
         run: echo "BASEURL=${{secrets.BASEURL}}" | cat >> .env
+      - name: "Write key to .env file"
+        run: echo "KEY=${{secrets.KEY}}" | cat >> .env
       - name: "Run build_runner build"
         run: flutter pub run build_runner build --delete-conflicting-outputs
       - name: "Build Web App"
