--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   lottie: ^2.5.0
   provider: null
   shared_preferences: ^2.2.0
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   build_runner: ^2.4.6
