--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   envied: ^0.3.0+3
   flutter:
     sdk: flutter
+  flutter_rating_bar: ^4.0.1
   flutter_svg: ^2.0.7
   google_fonts: ^5.1.0
   google_maps_flutter: ^2.4.0
