--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,11 @@ dependencies:
   google_fonts: ^5.1.0
   google_maps_flutter: ^2.4.0
   http: ^1.1.0
+  intl: ^0.18.1
   lottie: ^2.5.0
   provider: null
   shared_preferences: ^2.2.0
+  timeline_tile: ^2.0.0
   url_launcher: ^6.1.12
 
 dev_dependencies:
