--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -24,7 +24,7 @@ jobs:
       - name: "Run build_runner build"
         run: flutter pub run build_runner build --delete-conflicting-outputs
       - name: "Build Web App"
-        run: flutter build web
+        run: flutter build web --web-renderer html
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
