--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -26,7 +26,7 @@ jobs:
       - name: "Run build_runner build"
         run: flutter pub run build_runner build --delete-conflicting-outputs
       - name: "Build Web App"
-        run: flutter build web --web-renderer html
+        run: flutter build web
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
